# hearthspace

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE.md  PLAN.md  README.md  SETUP.md  TODO.md  build.rs  opencode.json
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  e2e.yml
crates/waydriver-hearthspace/: Cargo.toml
crates/waydriver-hearthspace/src/: lib.rs
docs/: APPS.md  DRM.md  E2E_TESTING.md  NATIVE_TESTING.md  RENDERING.md  UI.md  WINDOW_SEMANTICS.md
scripts/: smoke-udev-gtk.sh  smoke-udev-screenshot-command.sh
src/: a11y.rs  accessibility.rs  app_catalog.rs  compositor.rs  config.rs  controls.rs  geometry.rs  gtk_test_app.rs  idle.rs  lib.rs  main.rs  ocr.rs  shell.rs  shell_bar.rs
src/compositor/: cursor.rs  handlers.rs  input.rs  masonry_titlebar.rs  mod.rs  output.rs  rendering.rs  runtime.rs  shell_integration.rs  udev.rs  viewport.rs  windows.rs
src/compositor/udev/: device.rs  input.rs
src/compositor/windows/: geometry.rs  ordering.rs
src/shell/: app_catalog.rs  bar.rs  command.rs  mod.rs  xilem_button.rs  xilem_shell.rs
tests/: headless_control.rs  waydriver_hearthspace.rs
todos/: APP_LAUNCHING.md  BACKENDS.md  IMPROVEMENTS.md  MCP_WINDOW_METADATA.md  NATIVE_BACKEND.md  OTHERS.md  ROADMAP.md  TESTING.md  UDEV.md  WAYDRIVER.md  WINDOW_ACTIVITY_STATUS.md
