[package]
name = "hearthspace"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"

[dependencies]
async-io = "2.3.3"
atspi = "0.30.0"
gtk = { package = "gtk4", version = "0.11" }
# Xilem (app shell) and Masonry (compositor-side imaging) are pulled from our
# linebender/xilem fork branch backing PR linebender/xilem#1830, which adds
# `WindowOptionsExtLinux::with_name` so a Xilem window can advertise a Wayland
# `app_id` (and X11 `WM_CLASS`). Repoint to upstream once the PR lands.
# See SETUP.md for details.
masonry = { git = "https://github.com/crutchcorn/xilem", branch = "wayland-app-id", features = ["testing"] }
xilem = { git = "https://github.com/crutchcorn/xilem", branch = "wayland-app-id" }
# naga 28 (pulled in transitively via wgpu/vello) only compiles its WGSL
# error-emit path when the `termcolor` feature is enabled, but the crates that
# depend on it (wgpu-core, vello_shaders) enable `wgsl-in` without it. We add a
# direct dependency purely to union `termcolor` into the shared naga build.
naga = { version = "28.0.0", default-features = false, features = ["termcolor"] }
# Parley's fontique discovers system fonts via fontconfig. Enabling its
# `fontconfig-dlopen` code path makes it load libfontconfig at runtime instead
# of link-time, which avoids needing fontconfig dev headers at build time.
fontique = { version = "0.8.0", features = ["fontconfig-dlopen"] }
# Masonry's CPU render harness returns an `image::RgbaImage`; name the type
# directly so the title-text raster path is testable. Pulled in transitively
# already, so this only fixes the version we link against.
image = { version = "0.25", default-features = false }
smithay = { version = "0.7.0", default-features = false, features = ["backend_winit", "desktop", "renderer_gl", "wayland_frontend"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wayland-protocols = { version = "0.32.8", features = ["server"] }
wayland-server = "0.31.9"

[dev-dependencies]
proptest = "1"
rstest = "0.26"
tempfile = "3"

# Workaround for an upstream incompatibility pulled in via Xilem/Masonry:
# `vello_shaders` 0.8's build script depends on `naga` 28 with the `wgsl-in`
# feature but without `termcolor`, yet naga 28's WGSL error-emit path only
# compiles when `termcolor` is enabled. Declaring naga in our own build graph
# with `termcolor` makes Cargo unify that feature in, so the vello shader build
# script compiles. The empty `build.rs` exists solely to activate this entry.
[build-dependencies]
naga = { version = "28.0.0", default-features = false, features = ["wgsl-in", "termcolor"] }

# Centralized lint policy so local `cargo clippy`/`cargo build` enforce the same
# discipline as CI (which also passes `-D warnings` to escalate rustc warnings).
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
