[package]
name = "waydriver-hearthspace"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "net", "process", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
waydriver = "0.3.9"
